Save progress on refactoring.

--- a/notebooks/basilisk_2D_velocity_field.ipynb
+++ b/notebooks/basilisk_2D_velocity_field.ipynb
@@ -27,105 +27,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./data/bhaga_02_l16_t30.csv', './data/bhaga_03_l16_t30.csv', './data/bhaga_04_l16_t20.csv', './data/water_01_l16_t12.csv', './data/water_03_l16_t14.csv', './data/water_05_l16_t14.csv']\n"
+      "0 ../data/bhaga_02_l16\n",
+      "1 ../data/bhaga_03_l16\n",
+      "2 ../data/bhaga_04_l16\n",
+      "3 ../data/water_01_l16\n",
+      "4 ../data/water_03_l16\n",
+      "5 ../data/water_05_l16\n"
      ]
     }
    ],
    "source": [
     "import glob\n",
     "\n",
-    "data_path = \"./data/\"\n",
-    "files = sorted(glob.glob(data_path + \"*\"))\n",
-    "print(files)"
+    "data_path = \"../data/\"\n",
+    "bhaga_cases = glob.glob(data_path + \"bhaga_0[2-4]_l16\")\n",
+    "water_cases = glob.glob(data_path + \"water_0[1-5]_l16\")\n",
+    "cases = sorted(bhaga_cases + water_cases)\n",
+    "for i, case in enumerate(cases):\n",
+    "    print(i, case)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully read file \u001b[1m../data/bhaga_02_l16/log.bhaga_02_l16.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/bhaga_02_l16/bhaga_02_l16_t30.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/bhaga_03_l16/log.bhaga_03_l16.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/bhaga_03_l16/bhaga_03_l16_t30.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/bhaga_04_l16/log.bhaga_04_l16.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/bhaga_04_l16/bhaga_04_l16_t20.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/water_01_l16/log.water_01_l16.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/water_01_l16/water_01_l16_t12.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/water_03_l16/log.water_03_l16.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/water_03_l16/water_03_l16_t14.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/water_05_l16/log.water_05_l16.csv\u001b[0m\n",
+      "Successfully read file \u001b[1m../data/water_05_l16/water_05_l16_t14.csv\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.tri as tri\n",
+    "import helper_module as hm\n",
     "\n",
-    "class Velocity():\n",
-    "    def __init__(self, path=None, center=None, u_b=None, ga=None):\n",
-    "        self.path = path\n",
-    "        self.center = center\n",
-    "        self.u_b = u_b\n",
-    "        self.ga = ga\n",
-    "        self.read_from_disk()\n",
-    "        self.triang = None\n",
-    "        self.interpolator_u_x = None\n",
-    "        self.interpolator_u_y = None\n",
-    "        self.interpolator_f = None\n",
-    "        \n",
-    "        \n",
-    "    def read_from_disk(self):\n",
-    "        names = ['f', 'ref', 'u_x', 'u_y', 'u_z', 'x', 'y', 'z']\n",
-    "        usecols = ['f', 'u_x', 'u_y', 'x', 'y']\n",
-    "        try:\n",
-    "            self.data = pd.read_csv(self.path, sep=',', header=0, names=names, usecols=usecols)\n",
-    "        except Exception as read_exc:\n",
-    "            print(\"Error reading data from disk for file \\033[1m{}\\033[0m\".format(self.path))\n",
-    "            \n",
-    "    \n",
-    "    def create_triangulation(self):\n",
-    "        self.triang = tri.Triangulation(self.data['x'].values, self.data['y'].values-self.center)\n",
-    "    \n",
-    "    \n",
-    "    def get_reynolds(self, xi, yi, relative=False, magnitude=True):\n",
-    "        # create triangulation\n",
-    "        if self.triang is None: self.create_triangulation()\n",
-    "                        \n",
-    "        if (self.interpolator_u_x is None) or (self.interpolator_u_y is None):\n",
-    "            self.interpolator_u_x = tri.CubicTriInterpolator(self.triang, self.data['u_x'].values, kind='geom')\n",
-    "            self.interpolator_u_y = tri.CubicTriInterpolator(self.triang, self.data['u_y'].values, kind='geom')\n",
-    "            \n",
-    "        u_x_i = self.interpolator_u_x(xi, yi)\n",
-    "        u_y_i = self.interpolator_u_y(xi, yi)\n",
-    "        \n",
-    "        if relative:\n",
-    "            u_x_i -= self.u_b\n",
-    "            \n",
-    "        u_x_i *= self.ga\n",
-    "        u_y_i *= self.ga\n",
-    "            \n",
-    "        if magnitude:\n",
-    "            return np.sqrt(np.square(u_x_i) + np.square(u_y_i))\n",
-    "        else:\n",
-    "            return u_y_i, u_x_i # paraview bug: the transform filter does not swap the vector components\n",
-    "        \n",
-    "    def get_volume_fraction(self, xi, yi):\n",
-    "        # create triangulation\n",
-    "        if self.triang is None: self.create_triangulation()\n",
-    "            \n",
-    "        if self.interpolator_f is None:\n",
-    "            self.interpolator_f = tri.CubicTriInterpolator(self.triang, self.data['f'].values, kind='geom')\n",
-    "        \n",
-    "        return self.interpolator_f(xi, yi)\n",
+    "times = [30, 30, 20, 12, 14, 14] # Basilisk simulation time\n",
+    "Ga = [15.2400, 134.626, 30.8340, 98.6715, 163.450, 238.287]\n",
+    "#bubble_centers = [19.57088588, 25.93888942, 15.87381194, 34.28257266, 41.86696306, 38.27362914]\n",
+    "#bubble_velocities = [0.54874959, 0.78901010, 0.63062704, 2.93135279, 3.07036012, 2.76750992]\n",
     "\n",
-    "#times = [30, 30, 20, 12, 14, 14] # Basilisk simulation time\n",
-    "bubble_centers = [19.57088588, 25.93888942, 15.87381194, 34.28257266, 41.86696306, 38.27362914]\n",
-    "bubble_velocities = [0.54874959, 0.78901010, 0.63062704, 2.93135279, 3.07036012, 2.76750992]\n",
-    "ga = [15.2400, 134.626, 30.8340, 98.6715, 163.450, 238.287]\n",
-    "        \n",
-    "bhaga_02 = Velocity(files[0], center=bubble_centers[0], u_b=bubble_velocities[0], ga=ga[0]) # t=30\n",
-    "bhaga_03 = Velocity(files[1], center=bubble_centers[1], u_b=bubble_velocities[1], ga=ga[1]) # t=30\n",
-    "bhaga_04 = Velocity(files[2], center=bubble_centers[2], u_b=bubble_velocities[2], ga=ga[2]) # t=20\n",
-    "water_01 = Velocity(files[3], center=bubble_centers[3], u_b=bubble_velocities[3], ga=ga[3]) # t=12\n",
-    "water_03 = Velocity(files[4], center=bubble_centers[4], u_b=bubble_velocities[4], ga=ga[4]) # t=14\n",
-    "water_05 = Velocity(files[5], center=bubble_centers[5], u_b=bubble_velocities[5], ga=ga[5]) # t=14\n",
-    "\n",
-    "all_fields = [bhaga_02, bhaga_03, bhaga_04, water_01, water_03, water_05]"
+    "all_fields = {}\n",
+    "for i, case in enumerate(cases):\n",
+    "    case_name = case.split(\"/\")[-1]\n",
+    "    log_path = case + \"/log.\" + case_name + \".csv\"\n",
+    "    log = hm.Logfile(log_path)\n",
+    "    log.read_logfile(usecols=['time', 'u_x', 'x'])\n",
+    "    row = log.find_closest(\"time\", times[i])\n",
+    "    field_path = case + \"/\" + case_name + \"_t{:2d}.csv\".format(times[i])\n",
+    "    all_fields[case_name] = hm.CenterFieldValues2D(field_path, [0.0, row.x.values[0]], [0.0, row.u_x.values[0]])"
    ]
   },
   {
