--- a/notebooks/process_plic_data.ipynb
+++ b/notebooks/process_plic_data.ipynb
@@ -32,25 +32,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 water_05_l14\n",
-      "1 water_05_l15\n",
-      "2 water_05_l16\n",
-      "3 bhaga_02_l14\n",
-      "4 bhaga_02_l15\n",
-      "5 bhaga_02_l16\n",
-      "6 bhaga_03_l14\n",
-      "7 bhaga_03_l15\n",
-      "8 bhaga_03_l16\n",
-      "9 bhaga_04_l14\n",
-      "10 bhaga_04_l15\n",
-      "11 bhaga_04_l16\n"
+      "0 water_01_l14\n",
+      "1 water_01_l15\n",
+      "2 water_01_l16\n",
+      "3 water_03_l14\n",
+      "4 water_03_l15\n",
+      "5 water_03_l16\n",
+      "6 water_05_l14\n",
+      "7 water_05_l15\n",
+      "8 water_05_l16\n",
+      "9 bhaga_02_l14\n",
+      "10 bhaga_02_l15\n",
+      "11 bhaga_02_l16\n",
+      "12 bhaga_03_l14\n",
+      "13 bhaga_03_l15\n",
+      "14 bhaga_03_l16\n",
+      "15 bhaga_04_l14\n",
+      "16 bhaga_04_l15\n",
+      "17 bhaga_04_l16\n"
      ]
     }
    ],
@@ -62,8 +68,8 @@
     "plic_source = \"plic\"\n",
     "plic_target = \"plic_clean\"\n",
     "\n",
-    "bhaga_cases = [\"bhaga_{:02d}\".format(case) + \"_l\" + str(level) for case in range(2,5) for level in [14, 15, 16]]\n",
-    "water_cases = [\"water_{:02d}\".format(case) + \"_l\" + str(level) for case in [5] for level in [14, 15, 16]]\n",
+    "bhaga_cases = [\"bhaga_{:02d}\".format(case) + \"_l\" + str(level) for case in [2, 3, 4] for level in [14, 15, 16]]\n",
+    "water_cases = [\"water_{:02d}\".format(case) + \"_l\" + str(level) for case in [1, 3, 5] for level in [14, 15, 16]]\n",
     "cases = water_cases + bhaga_cases\n",
     "\n",
     "for i, case in enumerate(cases):\n",
@@ -72,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,37 +152,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 110.39it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 114.64it/s]\n",
-      "100%|██████████| 4/4 [00:00<00:00, 149.84it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 177.46it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 182.96it/s]\n",
-      "100%|██████████| 5/5 [00:00<00:00, 175.31it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 181.23it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 173.93it/s]\n",
-      "100%|██████████| 5/5 [00:00<00:00, 180.85it/s]\n",
       "0it [00:00, ?it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 140.53it/s]\n",
-      "100%|██████████| 5/5 [00:00<00:00, 146.92it/s]"
+      "0it [00:00, ?it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 77.54it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 70.03it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 91.75it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 85.47it/s]\n",
+      "100%|██████████| 6/6 [00:00<00:00, 98.88it/s]\n",
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing simulation folder water_01_l14\n",
+      "Processing simulation folder water_01_l15\n",
+      "Processing simulation folder water_01_l16\n",
+      "Processing simulation folder water_03_l14\n",
+      "Processing simulation folder water_03_l15\n",
+      "Processing simulation folder water_03_l16\n",
       "Processing simulation folder water_05_l14\n",
       "Processing simulation folder water_05_l15\n",
       "Processing simulation folder water_05_l16\n",
-      "Processing simulation folder bhaga_02_l14\n",
+      "Processing simulation folder bhaga_02_l14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 95.87it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 79.65it/s]\n",
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Processing simulation folder bhaga_02_l15\n",
-      "Processing simulation folder bhaga_02_l16\n",
+      "Processing simulation folder bhaga_02_l16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5/5 [00:00<00:00, 90.56it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 89.25it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 89.79it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 91.12it/s]\n",
+      "0it [00:00, ?it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 73.21it/s]\n",
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Processing simulation folder bhaga_03_l14\n",
       "Processing simulation folder bhaga_03_l15\n",
       "Processing simulation folder bhaga_03_l16\n",
@@ -189,7 +233,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 5/5 [00:00<00:00, 68.54it/s]\n"
      ]
     }
    ],
