Add ffmpeg command to create animation from single images; fixes issue #4.

--- a/notebooks/animate_fluxes.ipynb
+++ b/notebooks/animate_fluxes.ipynb
@@ -24,6 +24,13 @@
     "\n",
     "For the product species, at both boundaries the concentration value is set to zero. For $P$ there are several sensible boundary conditions, but the chosen ones are sufficient to create a realistic profile.\n",
     "\n",
+    "## Creating an animation from images\n",
+    "Create a video by running\n",
+    "\n",
+    "```\n",
+    "ffmpeg -framerate 10 -i base_name_%03d.png -c:v libx264 -vf scale=1320:-2 -pix_fmt yuv420p your_video.mp4\n",
+    "```\n",
+    "\n",
     "## Solving a single boundary value problem using SciPy"
    ]
   },
