--- a/notebooks/basilisk_2D_interface_velocity.ipynb
+++ b/notebooks/basilisk_2D_interface_velocity.ipynb
@@ -46,6 +46,7 @@
     "import torch\n",
     "\n",
     "%matplotlib inline\n",
+    "!mkdir -p ../output/models\n",
     "\n",
     "# make torch results reproducible and use double precision\n",
     "torch.set_default_tensor_type(torch.DoubleTensor)\n",
