Clarify dependencies in creation of model assemblies.

--- a/notebooks/create_sgs_model_assembly.ipynb
+++ b/notebooks/create_sgs_model_assembly.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create SGS model assemblies"
+    "# Create SGS model assemblies\n",
+    "\n",
+    "This notebook creates and exports wrapper models to be used in OpenFOAM simulations. Each wrapper model hides the single MLP models for diffusive and convective fluxes for one species. The wrapper model also contains constants to scale and rescale model inputs and outputs.\n",
+    "\n",
+    "To create the model assemblies, the notebook [create_sgs_models.ipynb](https://github.com/AndreWeiner/phd_notebooks/blob/master/notebooks/create_sgs_models.ipynb) has to be run first."
    ]
   },
   {
