Add dependencies section to all notebooks.

--- a/notebooks/animate_fluxes.ipynb
+++ b/notebooks/animate_fluxes.ipynb
@@ -8,6 +8,10 @@
     "\n",
     "This notebook highlights the effect of low mesh resolution on diffusive fluxes, convective fluxes, and source terms due to reactions in a standard finite volume discretization of reactive species boundary layers. To obtain realistic profiles, a coupled system of 1D reaction-diffusion equations is solved.\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks or to the data set.\n",
+    "\n",
     "## Mathematical problem\n",
     "\n",
     "We are looking at a single reaction of type $2A+B\\rightarrow P$, where the transfer species $A$ reacts with some bulk component $B$ to the desired product $P$. The reaction-diffusion equations for such a system read\n",
