--- a/notebooks/animate_profile_selection.ipynb
+++ b/notebooks/animate_profile_selection.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Animate parameter fitting"
+    "# Animate parameter fitting\n",
+    "\n",
+    "This notebook creates the animations used in my [phd defence](https://andreweiner.github.io/reveal.js/phd_defence.html#/) to visualize the paramter fitting.\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks or to the data set.\n",
+    "\n",
+    "## Imports and analytical solutions"
    ]
   },
   {
