--- a/notebooks/average_concentration_feature.ipynb
+++ b/notebooks/average_concentration_feature.ipynb
@@ -8,7 +8,13 @@
     "\n",
     "The most important feature in the subgrid-scale modeling of reactive species boundary layers is the cell-averaged concentration. In the target simulation, this concentration is the only one that is known and the idea is to reconstruct an approximate concentration profile from the average. In the simulation used to generate the training data, the concentration field is highly resolved such that it is possible to down-sample the solution on coarser meshes while knowing the numerically predicted fluxes on the fine mesh at a certain position normal to the interface.\n",
     "\n",
-    "The following sketch aims to visualize this process. The reference profile is the same as in the notebook *sgs_boundary_value_problem.ipynb*."
+    "The following sketch aims to visualize this process. The reference profile is the same as in the notebook *sgs_boundary_value_problem.ipynb*.\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks or to the data set.\n",
+    "\n",
+    "## Visualization"
    ]
   },
   {
