--- a/notebooks/basilisk_2D_interface_velocity.ipynb
+++ b/notebooks/basilisk_2D_interface_velocity.ipynb
@@ -14,7 +14,27 @@
     "* compute the unit normal vector for each PLIC plane\n",
     "* decompose the velocity vector in tangential and normal contribution (with respect to each plane)\n",
     "* filter out some data points with bad quality\n",
-    "* train a MLP that takes the polar angle as features and returns the tangential velocity (magnitude) as label"
+    "* train a MLP that takes the polar angle as features and returns the tangential velocity (magnitude) as label\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "- [process_plic_data.ipynb](http://127.0.0.1:8888/notebooks/process_plic_data.ipynb)\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/bhaga_02_l16/bhaga_02_l16_t30.csv\n",
+    "- ../data/bhaga_03_l16/bhaga_03_l16_t30.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_t20.csv\n",
+    "- ../data/water_01_l16/water_01_l16_t12.csv\n",
+    "- ../data/water_03_l16/water_03_l16_t14.csv\n",
+    "- ../data/water_05_l16/water_05_l16_t14.csv\n",
+    "\n",
+    "To see how the data was extracted from Basilisk simulations, refer to the notebook [basilisk_2D_velocity_field.ipynb](http://127.0.0.1:8888/notebooks/basilisk_2D_velocity_field.ipynb).\n",
+    "\n",
+    "## Imports"
    ]
   },
   {
