--- a/notebooks/basilisk_2D_mesh_dependency.ipynb
+++ b/notebooks/basilisk_2D_mesh_dependency.ipynb
@@ -14,7 +14,16 @@
     "- a small bubble in water at 20°C, $Mo=2.5728\\times 10^{-11}$\n",
     "    - $d_{eq}=1.8~mm$ corresponding to $Eo=0.4361$, $Ga^\\prime = 238.29$\n",
     "    \n",
-    "The shapes are compared at time instances for which the shapes are steady (mostly). The mesh size was varied by setting the maximum allowed refinement level to 14, 15, and 16."
+    "The shapes are compared at time instances for which the shapes are steady (mostly). The mesh size was varied by setting the maximum allowed refinement level to 14, 15, and 16.\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "- [process_plic_data.ipynb](http://127.0.0.1:8888/notebooks/process_plic_data.ipynb)\n",
+    "\n",
+    "## Imports and data"
    ]
   },
   {
