--- a/notebooks/basilisk_2D_shape_approximation_complex.ipynb
+++ b/notebooks/basilisk_2D_shape_approximation_complex.ipynb
@@ -23,6 +23,14 @@
     "5. selcet all points on the outer contour and create an approximation\n",
     "6. use the networks to create a 2D STL file\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "- [process_plic_data.ipynb](http://127.0.0.1:8888/notebooks/process_plic_data.ipynb)\n",
+    "\n",
+    "\n",
     "## Load facets for given time instances"
    ]
   },
