--- a/notebooks/basilisk_2D_shape_approximation_simple.ipynb
+++ b/notebooks/basilisk_2D_shape_approximation_simple.ipynb
@@ -22,6 +22,13 @@
     "3. train a neural network to learn a representation of the shape\n",
     "4. use the network to create a 2D STL file\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "- [process_plic_data.ipynb](http://127.0.0.1:8888/notebooks/process_plic_data.ipynb)\n",
+    "\n",
     "## Load facets for given time instances"
    ]
   },
