--- a/notebooks/basilisk_2D_velocity_field.ipynb
+++ b/notebooks/basilisk_2D_velocity_field.ipynb
@@ -22,7 +22,24 @@
     "- transform filter: rotate 90° around z axis to swap x and y axis\n",
     "- reflect filter: reflect at *X Max* and copy the input (checkbox *Copy Input*)\n",
     "- cell centers filter\n",
-    "- go to *File* -> *Save Data ...*; select a file name; set the precission to 15 and select *Points* as field association; save"
+    "- go to *File* -> *Save Data ...*; select a file name; set the precission to 15 and select *Points* as field association; save\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/bhaga_02_l16/bhaga_02_l16_t30.csv\n",
+    "- ../data/bhaga_03_l16/bhaga_03_l16_t30.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_t20.csv\n",
+    "- ../data/water_01_l16/water_01_l16_t12.csv\n",
+    "- ../data/water_03_l16/water_03_l16_t14.csv\n",
+    "- ../data/water_05_l16/water_05_l16_t14.csv\n",
+    "\n",
+    "## Imports and data"
    ]
   },
   {
