--- a/notebooks/create_sgs_model_assembly.ipynb
+++ b/notebooks/create_sgs_model_assembly.ipynb
@@ -8,7 +8,14 @@
     "\n",
     "This notebook creates and exports wrapper models to be used in OpenFOAM simulations. Each wrapper model hides the single MLP models for diffusive and convective fluxes for one species. The wrapper model also contains constants to scale and rescale model inputs and outputs.\n",
     "\n",
-    "To create the model assemblies, the notebook [create_sgs_models.ipynb](https://github.com/AndreWeiner/phd_notebooks/blob/master/notebooks/create_sgs_models.ipynb) has to be run first."
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [create_sgs_models.ipynb](http://127.0.0.1:8888/notebooks/create_sgs_models.ipynb)\n",
+    "- [reduce_training_data.ipynb](http://127.0.0.1:8888/notebooks/reduce_training_data.ipynb)\n",
+    "\n",
+    "## Model assemblies"
    ]
   },
   {
