--- a/notebooks/create_sgs_models.ipynb
+++ b/notebooks/create_sgs_models.ipynb
@@ -6,6 +6,12 @@
    "source": [
     "# Create subgrid-scale models for various reactions\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [reduce_training_data.ipynb](http://127.0.0.1:8888/notebooks/reduce_training_data.ipynb)\n",
+    "\n",
     "## Load reduced training data"
    ]
   },
