--- a/notebooks/eo_re_mo_diagramm.ipynb
+++ b/notebooks/eo_re_mo_diagramm.ipynb
@@ -8,7 +8,21 @@
     "\n",
     "## Overview\n",
     "\n",
-    "The aim of this notebook is to provide a quick way for creating specialized $Eo-Re-Mo$ diagramms (Eötvös-Reynolds-Morton). First, the original iso-Morton lines are imported from a *csv* files. The data was extracted from figure 2.5 on page 27 in *Bubbles, Drops, and Particles* by R. Clift, J. R. Grace, and M. E. Weber using [Digitizer](http://markummitchell.github.io/engauge-digitizer/)."
+    "The aim of this notebook is to provide a quick way for creating specialized $Eo-Re-Mo$ diagramms (Eötvös-Reynolds-Morton). First, the original iso-Morton lines are imported from a *csv* files. The data was extracted from figure 2.5 on page 27 in *Bubbles, Drops, and Particles* by R. Clift, J. R. Grace, and M. E. Weber using [Digitizer](http://markummitchell.github.io/engauge-digitizer/).\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "- [process_plic_data.ipynb](http://127.0.0.1:8888/notebooks/process_plic_data.ipynb)\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/EoReMo/EoMoDiag-MortonCurves.csv\n",
+    "- ../data/EoReMo/EoMoDiag-SphericalBoundary.csv\n",
+    "\n",
+    "## Imports"
    ]
   },
   {
