--- a/notebooks/gas_liquid_properties.ipynb
+++ b/notebooks/gas_liquid_properties.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Material properties of water, DCM, and some gases"
+    "# Material properties of water, DCM, and some gases\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks or to the data set. The literature sources for the material properties used below can be found in the appendix of my thesis.\n",
+    "\n",
+    "## Visualizations"
    ]
   },
   {
