--- a/notebooks/of_vs_basilisk_flow_field.ipynb
+++ b/notebooks/of_vs_basilisk_flow_field.ipynb
@@ -12,6 +12,26 @@
     "- **OpenFOAM (free slip)**: single phase simulations have been performed in OpenFOAM (with simpleFoam). The bubble shape and rise velocity are inputs from the Basilisk simulations (see notebook *basilisk_2D_shape_approximation_...ipynb*). At the bubble surface boundary, a free slip condition has been applied for the velocity.\n",
     "- **OpenFOAM (pyTorch)**: the base setting is as before, but at the bubble surface the velocity vector as prescribed based on the output of a pyTorch model. The pyTorch model has been trained based on the tangential interface velocity obtained with the Basilisk simulations (see notebook *basilisk_2D_interface_velocity.ipynb*)\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/water_03_l16/water_03_l16_t14.csv\n",
+    "- ../data/bhaga_02_l16/bhaga_02_l16_t30.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_t20.csv\n",
+    "- ../data/water_03_l16/water_03_l16_of_flow_pyto.csv\n",
+    "- ../data/water_03_l16/water_03_l16_of_flow_slip.csv\n",
+    "- ../data/bhaga_02_l16/bhaga_02_l16_of_flow_pyto.csv\n",
+    "- ../data/bhaga_02_l16/bhaga_02_l16_of_flow_slip.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_of_flow_pyto.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_of_flow_slip.csv\n",
+    "\n",
+    "An instruction for how to extract the field values from Basilisk or OpenFOAM can be found in the notebook [basilisk_2D_velocity_field.ipynb](http://127.0.0.1:8888/notebooks/basilisk_2D_velocity_field.ipynb). The setups for the OpenFOAM simulations are available [here](https://github.com/AndreWeiner/phd_openfoam/tree/master/test_cases/simpleFoam).\n",
+    "\n",
     "## Read Basilisk fields"
    ]
   },
