--- a/notebooks/of_vs_basilisk_streamlines.ipynb
+++ b/notebooks/of_vs_basilisk_streamlines.ipynb
@@ -6,6 +6,23 @@
    "source": [
     "# Comparison of internal recirculation for dimpled ellipsoidal and skirted bubbles\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/bhaga_03_l16/bhaga_03_l16_t30.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_t20.csv\n",
+    "- ../data/bhaga_02_l16/bhaga_02_l16_of_flow_pyto.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_of_flow_pyto.csv\n",
+    "- ../data/bhaga_02_l16/bhaga_02_l16_of_flow_slip.csv\n",
+    "- ../data/bhaga_04_l16/bhaga_04_l16_of_flow_slip.csv\n",
+    "\n",
+    "To see how the data was extracted from Basilisk simulations, refer to the notebook [basilisk_2D_velocity_field.ipynb](http://127.0.0.1:8888/notebooks/basilisk_2D_velocity_field.ipynb). The setups for the OpenFOAM simulations are available [here](https://github.com/AndreWeiner/phd_openfoam/tree/master/test_cases/simpleFoam).\n",
+    "\n",
     "## Read fields from Basilisk and OpenFOAM simulations"
    ]
   },
