--- a/notebooks/of_water_05_mesh_dependency_velocity.ipynb
+++ b/notebooks/of_water_05_mesh_dependency_velocity.ipynb
@@ -8,7 +8,23 @@
     "\n",
     "The case *water_05* corresponds to a $d_b=1.8~mm$ air bubble rising in water and yields the highest Reynolds number among the investigated bubbles. The flow field was repeatedly computed in OpenFOAM on four meshes with different refinement levels (refinement_...). In a region around the bubble patch, the background hexmesh was slpit 1-4 times (snappyHexMesh) such that the average edge width decreses by a factor of approximately 0.5 (in $x$ and $y$ direction) between refinement levels.\n",
     "\n",
-    "Only the coarsest and finest levels are displayed here."
+    "Only the coarsest and finest levels are displayed here.\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/water_05_l16/water_05_l16_t14.csv\n",
+    "- ../data/water_05_l16/water_05_l16_of_flow_ref0.csv\n",
+    "- ../data/water_05_l16/water_05_l16_of_flow_ref3.csv\n",
+    "\n",
+    "To see how the data was extracted from Basilisk simulations, refer to the notebook [basilisk_2D_velocity_field.ipynb](http://127.0.0.1:8888/notebooks/basilisk_2D_velocity_field.ipynb). The setups for the OpenFOAM simulations are available [here](https://github.com/AndreWeiner/phd_openfoam/tree/master/test_cases/simpleFoam).\n",
+    "\n",
+    "## Visualization"
    ]
   },
   {
