--- a/notebooks/process_plic_data.ipynb
+++ b/notebooks/process_plic_data.ipynb
@@ -27,7 +27,13 @@
     "-0.47223 3.39844 -0.0585938\n",
     "...\n",
     "```\n",
-    "In two-dimensional data sets the entry **pz** is missing. For 2D cases, pass *shape_2D=True* as argument to the *process_shape* function"
+    "In two-dimensional data sets the entry **pz** is missing. For 2D cases, pass *shape_2D=True* as argument to the *process_shape* function\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook depends on no other notebooks. It accesses the raw, distribited Basilisk output files provided in the data set accompanying this repository, and writes merged PLIC files in the *plic_clean* folder of each Basilisk simulation.\n",
+    "\n",
+    "## Data processing"
    ]
   },
   {
