--- a/notebooks/prototype_reactions.ipynb
+++ b/notebooks/prototype_reactions.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# Notebook to investigate prototype inital value problems\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks or to the data set.\n",
+    "\n",
     "## Problem definition\n",
     "\n",
     "The following prototypic reaction system is considered:\n",
