--- a/notebooks/reduce_training_data.ipynb
+++ b/notebooks/reduce_training_data.ipynb
@@ -8,6 +8,17 @@
     "\n",
     "The *extractTrainingData* utility currently extracts all the available data but at lot of the data is redundant. For example, in the interface region between $\\varphi=0^\\circ$ and $\\varphi=120^\\circ$ the boundary layer is quickly developed (after about $\\tilde{t}\\approx0.3$). In the rear part, however, it takes until about $\\tilde{t}\\approx1$ before the concentration field close to the interface is developed. Moreover, the changes along $\\varphi$ are small, but the number of faces along the surface is enormous.\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/sgs_data/training_data_phys.csv\n",
+    "- ../data/sgs_data/training_data_decay.csv\n",
+    "- ../data/sgs_data/training_data_single.csv\n",
+    "- ../data/sgs_data/training_data_cons.csv\n",
+    "\n",
+    "The raw data was produced using [these](https://github.com/AndreWeiner/phd_openfoam/tree/master/test_cases/data_generation) OpenFOAM test cases.\n",
+    "\n",
     "## Loading the raw data"
    ]
   },
