--- a/notebooks/regression_algorithms.ipynb
+++ b/notebooks/regression_algorithms.ipynb
@@ -14,6 +14,13 @@
     "- K Nearest Neighbors (KNN)\n",
     "- multilayer preceptrons (MLP)\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [process_logs.ipynb](http://127.0.0.1:8888/notebooks/process_logs.ipynb)\n",
+    "- [process_plic_data.ipynb](http://127.0.0.1:8888/notebooks/process_plic_data.ipynb)\n",
+    "\n",
     "## Loading the data\n",
     "\n",
     "The problem considered here is the approximation of $r(\\varphi)$ for a spherical cap bubble, see the notebook *basilisk_2D_shape_approximation_simple.ipynb* for more information."
