--- a/notebooks/rise_velocity_vs_diameter_water.ipynb
+++ b/notebooks/rise_velocity_vs_diameter_water.ipynb
@@ -6,7 +6,18 @@
    "source": [
     "# Terminal velocity of air bubbles rising in water\n",
     "\n",
-    "Experimental rise velocities have been extracted from [Tomiyama et al. (1998)](https://www.jstage.jst.go.jp/article/jsmeb1993/41/2/41_2_472/_article) using [Engauge Digitizer](http://markummitchell.github.io/engauge-digitizer/). The bubble diameter $d_b$ in the extracted data has the unit $mm$. The bubble velocity is given in $cm/s$ (*water* file; extracted from Tomiyama et al. 1998; originally published in the Clift-Grace-Weber book on page 172). The reference curve for the contaminated bubble was also extracted from Clift et al. 1978 using Digitizer (figure 7.3 on page 172)."
+    "Experimental rise velocities have been extracted from [Tomiyama et al. (1998)](https://www.jstage.jst.go.jp/article/jsmeb1993/41/2/41_2_472/_article) using [Engauge Digitizer](http://markummitchell.github.io/engauge-digitizer/). The bubble diameter $d_b$ in the extracted data has the unit $mm$. The bubble velocity is given in $cm/s$ (*water* file; extracted from Tomiyama et al. 1998; originally published in the Clift-Grace-Weber book on page 172). The reference curve for the contaminated bubble was also extracted from Clift et al. 1978 using Digitizer (figure 7.3 on page 172).\n",
+    "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks.\n",
+    "\n",
+    "Data\n",
+    "\n",
+    "- ../data/tomiyama1998/tomiyama1998.csv\n",
+    "- ../data/tomiyama1998/curve_cont.csv\n",
+    "\n",
+    "## Data and visualization"
    ]
   },
   {
