--- a/notebooks/sgs_model_evaluation.ipynb
+++ b/notebooks/sgs_model_evaluation.ipynb
@@ -6,6 +6,21 @@
    "source": [
     "# Create subgrid-scale models performance\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "Notebooks (links work only if the Docker container is running)\n",
+    "\n",
+    "- [create_sgs_models.ipynb](http://127.0.0.1:8888/notebooks/create_sgs_models.ipynb)\n",
+    "\n",
+    "Raw data\n",
+    "\n",
+    "- ../data/sgs_data/training_data_phys.csv\n",
+    "- ../data/sgs_data/training_data_decay.csv\n",
+    "- ../data/sgs_data/training_data_single.csv\n",
+    "- ../data/sgs_data/training_data_cons.csv\n",
+    "\n",
+    "The raw data was produced using [these](https://github.com/AndreWeiner/phd_openfoam/tree/master/test_cases/data_generation) OpenFOAM test cases.\n",
+    "\n",
     "## Load data and define helper functions"
    ]
   },
