--- a/notebooks/sherwood_global.ipynb
+++ b/notebooks/sherwood_global.ipynb
@@ -11,6 +11,14 @@
     "- time dependent behavior for spherical cap, dimpled ellipsoidal, and skirted bubbles with and without reaction\n",
     "- comparison between slip and Dirichlet boundary condition\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks or to the data set.\n",
+    "\n",
+    "TODO: Add raw data to data set.\n",
+    "\n",
+    "The OpenFOAM setups based on which the Sherwood numbers were computed can be found [here](https://github.com/AndreWeiner/phd_openfoam/tree/master/test_cases/speciesFoam).\n",
+    "\n",
     "## Temporal behavior"
    ]
   },
@@ -44,82 +52,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t</th>\n",
-       "      <th>gradA</th>\n",
-       "      <th>area</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>96</td>\n",
-       "      <td>158.533293</td>\n",
-       "      <td>0.123131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>97</td>\n",
-       "      <td>158.533293</td>\n",
-       "      <td>0.123131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>98</td>\n",
-       "      <td>158.533293</td>\n",
-       "      <td>0.123131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>99</td>\n",
-       "      <td>158.533293</td>\n",
-       "      <td>0.123131</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>100</td>\n",
-       "      <td>158.533293</td>\n",
-       "      <td>0.123131</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       t       gradA      area\n",
-       "96    96  158.533293  0.123131\n",
-       "97    97  158.533293  0.123131\n",
-       "98    98  158.533293  0.123131\n",
-       "99    99  158.533293  0.123131\n",
-       "100  100  158.533293  0.123131"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'bhaga_04_decay_m3'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-863ae0bb0de6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mall_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheader\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mall_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"bhaga_04_decay_m3\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'bhaga_04_decay_m3'"
+     ]
     }
    ],
    "source": [
-    "file_names = bhaga_cases = glob.glob(data_path + \"*\")\n",
+    "file_names = glob.glob(data_path + \"*\")\n",
     "columns = [\"t\", \"gradA\", \"area\"]\n",
     "\n",
     "all_data = {}\n",
