--- a/notebooks/sherwood_local.ipynb
+++ b/notebooks/sherwood_local.ipynb
@@ -12,6 +12,14 @@
     "- comparison of slip and Dirichlet boundary conditions at the bubble surface\n",
     "- reactive local Sherwood number and enhancement factor for the bubble mentioned before and additionally for dimpled ellipsoidal, spherical cap and stable skirted bubbles\n",
     "\n",
+    "## Dependencies\n",
+    "\n",
+    "This notebook has no dependencies to other notebooks or to the data set.\n",
+    "\n",
+    "TODO: Add raw data to data set.\n",
+    "\n",
+    "The OpenFOAM setups based on which the Sherwood numbers were computed can be found [here](https://github.com/AndreWeiner/phd_openfoam/tree/master/test_cases/speciesFoam).\n",
+    "\n",
     "## Mesh dependency\n",
     "\n",
     "The mesh dependency study of the local Sherwood number shows that the global Sherwood number does not change necessarily monotonously with increasing mesh resolution."
